# veil

./: .coderabbit.yaml  .env.example  .env.railway.example  .gitignore  CLAUDE.md  SLACK.md  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  sentry.edge.config.ts  skills-lock.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.e2e.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  publish-sdk.yml
__tests__/: classification-engine.test.ts  normalizer.test.ts  ratelimit.test.ts
app/: global-error.tsx  globals.css  layout.tsx  page.tsx
app/api/agents/: route.ts
app/api/classifications/: route.ts
app/api/fixes/: route.ts
app/api/health/: route.ts
app/api/ingest/: route.ts
app/api/keys/: route.ts
app/api/me/: route.ts
app/api/patterns/: route.ts
app/api/sessions/: route.ts
app/api/stats/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/dashboard/agents/: page.tsx
app/dashboard/alerts/: page.tsx
app/dashboard/cost/: page.tsx
app/dashboard/errors/: page.tsx
app/dashboard/fixes/: page.tsx
app/dashboard/inspectors/: page.tsx
app/dashboard/patterns/: page.tsx
app/dashboard/sessions/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
apps/docs/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  theme.config.tsx
apps/inspector/: .env.railway.example  Dockerfile  pyproject.toml  railway.toml
apps/inspector/app/: auth.py  config.py  main.py  models.py
apps/inspector/app/crew/: agents.py  tasks.py
apps/inspector/app/db/: client.py  queries.py
apps/inspector/app/pipeline/: escalation.py  inspector_brain.py  pattern_detector.py  runner.py  summarizer.py  trace_analyst.py
apps/inspector/app/routers/: analyze.py
apps/landing/: package-lock.json  package.json  tailwind.config.ts
components/providers/: QueryProvider.tsx
components/veil/: AgentStatusBadge.tsx  AlertCard.tsx  AppSidebar.tsx  CostTrend.tsx  ErrorBoundary.tsx  FailureTypeTag.tsx  FindingCard.tsx  FixCard.tsx  FixImpactCard.tsx  HealthIndicator.tsx  InspectorRunCard.tsx  LiveBadge.tsx  OnboardingBanner.tsx  PatternCard.tsx  RealtimeProvider.tsx  SessionTimeline.tsx  SuggestionCard.tsx
e2e/: ingest.spec.ts
e2e/fixtures/: api.ts
hooks/: use-agents.ts  use-classifications.ts  use-fixes.ts  use-inspector-runs.ts  use-keys.ts  use-patterns.ts  use-realtime.ts  use-sessions.ts  use-slack-connection.ts  use-stats.ts
lib/: api-handler.ts  api.ts  env.client.ts  env.ts  error-reporter.ts  logger.ts  presenter.ts  ratelimit.ts  supabase-browser.ts  supabase.ts  utils.ts
lib/alerts/: circuit-breaker.ts  email.ts  slack.ts
lib/db/: clerk.ts  queries.ts  schema.ts
lib/normalizer/: index.ts  n8n.ts  zapier.ts
lib/rules/: categories.ts  engine.ts
lib/sdk/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
lib/sdk/src/veil/: __init__.py
lib/sdk/src/veil/_instrumentors/: __init__.py
lib/suggestions/: templates.ts
scripts/: migration_error_logs.sql  migration_inspector_runs.sql  test_failure_trigger.py
supabase/migrations/: 001_baseline_schema.sql  002_classifications_org_id.sql  003_core_indexes.sql  004_aggregation_functions.sql
(+81 files in other folders)
